--- a/Go Robot Web/index.html
+++ b/Go Robot Web/index.html
@@ -15,7 +15,7 @@
         <div class="navigation">
           <a href="index.html">Home</a>
           <a href="AlleUebungen.html">Alle Übungen </a>
-          <a href="#">About</a>
+          <a href="About.html">About</a>
           <a href="#">Contact</a>
         </div>
       </header>
