--- a/EinzelÜbung.html
+++ b/EinzelÜbung.html
@@ -19,12 +19,31 @@
           <a href="#">Contact</a>
         </div>
       </header>
+
+      <div class="carousel-container">
+        <div class="carousel-slide">
+          <img src="images/business-3.jpg" alt="BILD">
+          <img src="images/finance-1.jpg" alt="BILD">
+          <img src="images/politics-4.jpg" alt="BILD">
+        </div>
+      </div>
+  
+      <button id="prevBtn"> Prev </button>
+      <button id="prevBtn"> Next</button>
+
       <div class="media-icons">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
+
     </section>
-    
+
+
+
+
+
+    <script src="app.js"></script>
+
   </body>
 </html>
