--- a/AlleUebungen.html
+++ b/AlleUebungen.html
@@ -72,7 +72,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"> <a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -92,7 +92,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -112,7 +112,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -132,7 +132,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -152,7 +152,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -172,7 +172,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -192,7 +192,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -212,7 +212,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -232,7 +232,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -252,7 +252,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -272,7 +272,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -292,7 +292,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -312,7 +312,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -332,7 +332,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -352,7 +352,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                     <!-- single post -->
@@ -372,7 +372,7 @@
                             <h2>Lorem ipsum dolor sit amet</h2>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus recusandae aspernatur possimus illum, repellat ad quasi earum, illo voluptatibus minima fugiat saepe magni corporis vero eius accusantium quidem, consectetur nesciunt!</p>
                         </div>
-                        <button type = "button" class = "read-btn">Read All</button>
+                        <button type = "button" class = "read-btn"><a href="EinzelÜbung.html"></a>Read All</button>
                     </div>
                     <!-- end of single post -->
                 </div>
