geordneter und Contact seite einzelübung etc.

--- a/About.html
+++ b/About.html
@@ -14,15 +14,15 @@
         <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
           <a href="index.html">Home</a>
-          <a href="#">Alle Übungen </a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
+          <a href="AlleUebungen.html">Alle Übungen </a>
+          <a href="About.html">About</a>
+          <a href="Contact.html">Contact</a>
         </div>
       </header>
       <div class="about-section">
         <div class="inner-container">
             <h1>About Us</h1>
-            <img src="Bilder/pic.jpg">
+            <img src="images/">
             <p class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque.
             </p>
