--- a/AlleUebungen.html
+++ b/AlleUebungen.html
@@ -12,10 +12,10 @@
       <header>
         <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
-          <a href="index.html" >Home</a>
-          <a href="#" >Alle Übungen </a>
-          <a href="#" >About</a>
-          <a href="#" >Contact</a>
+            <a href="index.html">Home</a>
+            <a href="AlleUebungen.html">Alle Übungen </a>
+            <a href="About.html">About</a>
+            <a href="Contact.html">Contact</a>
         </div>
 
       </header> 
@@ -27,28 +27,22 @@
             <div class = "category-head">
                 <ul>
                     <div class = "category-title active" id = "all">
-                        <li>All</li>
-                        <span><i class = "fas fa-border-all"></i></span>
+                        <li>All</li>                    
                     </div>
                     <div class = "category-title" id = "Leicht">
                         <li>Leicht</li>
-                        <span><i class = "fas fa-theater-masks"></i></span>
                     </div>
                     <div class = "category-title" id = "Schwer">
                         <li>Schwer</li>
-                        <span><i class = "fas fa-landmark"></i></span>
                     </div>
                     <div class = "category-title" id = "kurz">
                         <li>15min</li>
-                        <span><i class = "fas fa-chart-area"></i></span>
                     </div>
                     <div class = "category-title" id = "lang">
                         <li>30min</li>
-                        <span><i class = "fas fa-coins"></i></span>
                     </div>
                     <div class = "category-title" id = "OG">
                         <li>Ohne Geräte</li>
-                        <span><i class = "fas fa-running"></i></span>
                     </div>
                 </ul>
             </div>
