--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <a href="index.html">Home</a>
           <a href="AlleUebungen.html">Alle Übungen </a>
           <a href="About.html">About</a>
-          <a href="#">Contact</a>
+          <a href="Contact.html">Contact</a>
         </div>
       </header>
       <div class="content">
@@ -24,13 +24,13 @@
           <h2>Fitness<br><span>For All</span></h2>
           <p>Bitte wählen sie rechts aus welchen Teil sie <br> bei ihren Fitness Übungen gerne nicht nutzen wollen oder können</p>
         </div>
-        <img src="Bilder/körper_ohne_Hin.png">
+        <img src="images/körper_ohne_Hin.png">
         <div class="buttons">
-        <a href="Oberarm.html"> <button class="Oberarm"> Oberarm  </button> </a>
-        <a href="Oberarm.html"> <button class="Unterarm"> Unterarm  </button> </a>
-        <a href="Oberarm.html"> <button class="Oberschenkel"> Oberschenkel  </button> </a>
-        <a href="Oberarm.html"> <button class="Unterschenkel"> Unterschenkel  </button> </a>
-        <a href="Oberarm.html"> <button class="Fuß"> Fuß  </button> </a>
+        <a href="AlleKörperteile/Oberarm.html"> <button class="Oberarm"> Oberarm  </button> </a>
+        <a href="AlleKörperteile/Unterarm.html"> <button class="Unterarm"> Unterarm  </button> </a>
+        <a href="AlleKörperteile/Oberschenkel.html"> <button class="Oberschenkel"> Oberschenkel  </button> </a>
+        <a href="AlleKörperteile/Unterschenkel.html"> <button class="Unterschenkel"> Unterschenkel  </button> </a>
+        <a href="AlleKörperteile/Fuß.html"> <button class="Fuß"> Fuß  </button> </a>
         </div>
       </div>
       <div class="media-icons">
