--- a/standart.html
+++ b/standart.html
@@ -14,9 +14,9 @@
         <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
           <a href="index.html">Home</a>
-          <a href="#">Alle Übungen </a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
+          <a href="AlleUebungen.html">Alle Übungen </a>
+          <a href="About.html">About</a>
+          <a href="Contact.html">Contact</a>
         </div>
       </header>
       <div class="media-icons">
