--- a/AlleUebungen.html
+++ b/AlleUebungen.html
@@ -376,7 +376,7 @@
     
 
     <!-- JS file -->
-    <script src = "javascript/AlleUebungen.js"></script>
+    <script src = "javascript/Filter.js"></script>
 
 
       <div class="media-icons">
