--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </div>
       </div>
       <div class="media-icons">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.facebook.com/GOROBOTS/"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/gorobot_official/"><i class="fab fa-instagram"></i></a>
       </div>
     </section>
 
