--- a/AlleKörperteile/Schultern.html
+++ b/AlleKörperteile/Schultern.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>  </title>
-    <link rel="stylesheet" type="text/css" href="Styles/AlleUebungen.css">
+    <title> Übungen für die Schultern </title>
+    <link rel="stylesheet" type="text/css" href="/Styles/AlleUebungen.css">
   </head>
   <body>
 
@@ -68,7 +68,7 @@
                                 Geschonte Bereiche: Beine, Bauch
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/Armzieher.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post -->
  
