--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
         </div>
         <img src="images/körper_ohne_Hin.png">
         <div class="buttons">
-        <a href="AlleKörperteile/Oberarm.html"> <button class="Oberarm"> Oberarm  </button> </a>
-        <a href="AlleKörperteile/Unterarm.html"> <button class="Unterarm"> Unterarm  </button> </a>
-        <a href="AlleKörperteile/Oberschenkel.html"> <button class="Oberschenkel"> Oberschenkel  </button> </a>
-        <a href="AlleKörperteile/Unterschenkel.html"> <button class="Unterschenkel"> Unterschenkel  </button> </a>
-        <a href="AlleKörperteile/Fuß.html"> <button class="Fuß"> Fuß  </button> </a>
+        <a href="AlleKörperteile/Schultern.html"> <button class="Schultern"> Schultern  </button> </a>
+        <a href="AlleKörperteile/Rumpf.html"> <button class="Rumpf"> Rumpf  </button> </a>
+        <a href="AlleKörperteile/Arme.html"> <button class="Arme"> Arme  </button> </a>
+        <a href="AlleKörperteile/Brust.html"> <button class="Brust"> Brust  </button> </a>
+        <a href="AlleKörperteile/Rücken.html"> <button class="Rücken"> Rücken  </button> </a>
+        <a href="AlleKörperteile/Bauch.html"> <button class="Bauch"> Bauch  </button> </a>
+        <a href="AlleKörperteile/Beine.html"> <button class="Beine"> Beine  </button> </a>
         </div>
       </div>
       <div class="media-icons">
