--- a/AlleKörperteile/Bauch.html
+++ b/AlleKörperteile/Bauch.html
@@ -3,21 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Übungen für den Bauch </title>
+    <title> Übungen ohne Beine </title>
     <link rel="stylesheet" type="text/css" href="/Styles/AlleUebungen.css">
   </head>
   <body>
 
     <section>
       <header>
-        <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
+        <h2><a href="/index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
-            <a href="index.html">Home</a>
-            <a href="AlleUebungen.html">Alle Übungen </a>
-            <a href="About.html">About</a>
-            <a href="Contact.html">Contact</a>
+            <a href="/index.html">Home</a>
+            <a href="/AlleUebungen.html">Alle Übungen </a>
+            <a href="/About.html">About</a>
+            <a href="/Contact.html">Contact</a>
         </div>
-
       </header> 
 
       <div class = "main-container">
@@ -68,29 +67,7 @@
                                 Geschonte Bereiche: Beine, Bauch
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
-                    </div>
-                    <!-- end of single post -->
- 
-                    <!-- single post -->
-                    <div class = "all 1">
-                        <div class = "post-img">
-                            <img src = "images/business-1.jpg" alt = "post">
-                        </div>
-                        <div class = "post-content">
-                            <div class = "post-content-top">
-                                <h2> Oberkörper neigen </h2>
-                            </div>
-                            <p> <!-- künstlicher Schlüssel: 2 <br> -->
-                                Schwierigkeit: 1 <br>
-                                Zeitaufwand: ca. 2 Minuten <br>
-                                Übungsart: Kraft <br>
-                                Material: --- <br>
-                                Trainierte Bereiche: Oberarme, Bauch, Rücken <br>
-                                Geschonte Bereiche: ---
-                                </p>
-                        </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Armzieher.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post -->
  
@@ -145,74 +122,6 @@
                         </div>
                         <div class = "post-content">
                             <div class = "post-content-top">
-                                <h2> Rücken überstrecken </h2>
-                            </div>
-                            <p> <!-- künstlicher Schlüssel: 5 <br> -->
-                                Schwierigkeit: 2 <br>
-                                Zeitaufwand: ca. 1 Minuten <br>
-                                Übungsart: Dehnung, Entspannung <br>
-                                Material: Hocker, Rollstuhl o.ä <br>
-                                Trainierte Bereiche: Rücken <br>
-                                Geschonte Bereiche: ---
-                                </p>
-                        </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
-                    </div>
-                    <!-- end of single post --> 
-
-                    
-                    <!-- single post -->
-                    <div class = "all 2">
-                        <div class = "post-img">
-                            <img src = "images/business-1.jpg" alt = "post">
-                        </div>
-                        <div class = "post-content">
-                            <div class = "post-content-top">
-                                <h2> Katzenbuckel </h2>
-                            </div>
-                            <p> <!-- künstlicher Schlüssel: 6 <br> -->
-                                Schwierigkeit: 2 <br>
-                                Zeitaufwand: ca. 1 Minuten <br>
-                                Übungsart: Dehnung, Entspannung <br>
-                                Material: --- <br>
-                                Trainierte Bereiche: Oberarme, Bauch, Rücken <br>
-                                Geschonte Bereiche: ---
-                                </p>
-                        </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
-                    </div>
-                    <!-- end of single post --> 
-                     
-
-                    <!-- single post -->
-                    <div class = "all 2">
-                        <div class = "post-img">
-                            <img src = "images/business-1.jpg" alt = "post">
-                        </div>
-                        <div class = "post-content">
-                            <div class = "post-content-top">
-                                <h2> Adlerflügel </h2>
-                            </div>
-                            <p> <!-- künstlicher Schlüssel: 7 <br> -->
-                                Schwierigkeit: 2 <br>
-                                Zeitaufwand: ca. 2 Minuten <br>
-                                Übungsart: Dehnung, Entspannung <br>
-                                Material: --- <br>
-                                Trainierte Bereiche: Schultern, Arme <br>
-                                Geschonte Bereiche: ---
-                                </p>
-                        </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
-                    </div>
-                    <!-- end of single post --> 
-
-                    <!-- single post -->
-                    <div class = "all 2">
-                        <div class = "post-img">
-                            <img src = "images/business-1.jpg" alt = "post">
-                        </div>
-                        <div class = "post-content">
-                            <div class = "post-content-top">
                                 <h2> Kamelritt </h2>
                             </div>
                             <p> <!-- künstlicher Schlüssel: 8 <br> -->
@@ -221,28 +130,6 @@
                                 Übungsart: Dehnung, Kraft, Konzentration <br>
                                 Material: Rollstuhl <br>
                                 Trainierte Bereiche: Rücken, BRust, Wirbelsäule <br>
-                                Geschonte Bereiche: ---
-                                </p>
-                        </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
-                    </div>
-                    <!-- end of single post --> 
-
-                    <!-- single post -->
-                    <div class = "all 1">
-                        <div class = "post-img">
-                            <img src = "images/business-1.jpg" alt = "post">
-                        </div>
-                        <div class = "post-content">
-                            <div class = "post-content-top">
-                                <h2> Drehsitz </h2>
-                            </div>
-                            <p> <!-- künstlicher Schlüssel: 9 <br> -->
-                                Schwierigkeit: 1 <br>
-                                Zeitaufwand: ca. 2 Minuten <br>
-                                Übungsart: Dehnung, Entspannung <br>
-                                Material: Rollstuhl <br>
-                                Trainierte Bereiche: Wirbelsäule, Bauch, bisschen Rumpf  <br>
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
@@ -287,50 +174,6 @@
                                 Übungsart: Dehnung <br>
                                 Material: Rollstuhl <br>
                                 Trainierte Bereiche: Wirbelsäule, Rücken <br>
-                                Geschonte Bereiche: ---
-                                </p>
-                        </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
-                    </div>
-                    <!-- end of single post --> 
-
-                    <!-- single post -->
-                    <div class = "all 2">
-                        <div class = "post-img">
-                            <img src = "images/business-1.jpg" alt = "post">
-                        </div>
-                        <div class = "post-content">
-                            <div class = "post-content-top">
-                                <h2> Aufrichten </h2>
-                            </div>
-                            <p> <!-- künstlicher Schlüssel: 12 <br> -->
-                                Schwierigkeit: 2 <br>
-                                Zeitaufwand: ca. 1 Minuten <br>
-                                Übungsart: Dehnung <br>
-                                Material: --- <br>
-                                Trainierte Bereiche: Arme, Schultern, Brust <br>
-                                Geschonte Bereiche: ---
-                                </p>
-                        </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
-                    </div>
-                    <!-- end of single post --> 
-
-                    <!-- single post -->
-                    <div class = "all 2 3">
-                        <div class = "post-img">
-                            <img src = "images/business-1.jpg" alt = "post">
-                        </div>
-                        <div class = "post-content">
-                            <div class = "post-content-top">
-                                <h2> Kräftigung SChulterblattstabilisatoren </h2>
-                            </div>
-                            <p> <!-- künstlicher Schlüssel: 13 <br> -->
-                                Schwierigkeit: 2-3 <br>
-                                Zeitaufwand: ca. 2 Minuten <br>
-                                Übungsart: Kraft <br>
-                                Material: Rollstuhl, bei variante Handel <br>
-                                Trainierte Bereiche: Arme, Schultern <br>
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
@@ -397,28 +240,6 @@
                                 Übungsart: Kraft <br>
                                 Material: Rollstuhl, Theraband <br>
                                 Trainierte Bereiche: Arme und Schultern <br>
-                                Geschonte Bereiche: ---
-                                </p>
-                        </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
-                    </div>
-                    <!-- end of single post --> 
-
-                    <!-- single post -->
-                    <div class = "all 3">
-                        <div class = "post-img">
-                            <img src = "images/business-1.jpg" alt = "post">
-                        </div>
-                        <div class = "post-content">
-                            <div class = "post-content-top">
-                                <h2> Kräftigung der schrägen Bauchmuskulatur </h2>
-                            </div>
-                            <p> <!-- künstlicher Schlüssel: 1 <br> -->
-                                Schwierigkeit: 3 <br>
-                                Zeitaufwand: ca. Minuten <br>
-                                Übungsart: Kraft <br>
-                                Material: Rollstuhl, Theraband <br>
-                                Trainierte Bereiche: Bauch, Arme <br>
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
@@ -623,27 +444,6 @@
                     </div>
                     <!-- end of single post --> 
 
-                    <!-- single post -->
-                    <div class = "all 3">
-                        <div class = "post-img">
-                            <img src = "images/business-1.jpg" alt = "post">
-                        </div>
-                        <div class = "post-content">
-                            <div class = "post-content-top">
-                                <h2> Kräftigung der Rücken- und Bauchmuskulatur </h2>
-                            </div>
-                            <p> <!-- künstlicher Schlüssel: 27 <br> -->
-                                Schwierigkeit: 2 <br>
-                                Zeitaufwand: ca. 2 Minuten <br>
-                                Übungsart: Kräftigung <br>
-                                Material: Rollstuhl <br>
-                                Trainierte Bereiche: Brust, Bauch, Arme, Rücken <br>
-                                Geschonte Bereiche: ---
-                                </p>
-                        </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
-                    </div>
-                    <!-- end of single post --> 
                 </div>
             </div>
         </div>
