--- a/AlleUebungen.html
+++ b/AlleUebungen.html
@@ -174,8 +174,8 @@
                                 Schwierigkeit: 2 <br>
                                 Zeitaufwand: ca. 1 Minuten <br>
                                 Übungsart: Dehnung, Entspannung <br>
-                                Material: --- <br>
-                                Trainierte Bereiche: Oberarme, Bauch, Rücken <br>
+                                Material: Hocker, Rollstuhl o.ä <br>
+                                Trainierte Bereiche: Rücken <br>
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
@@ -413,7 +413,7 @@
                             <div class = "post-content-top">
                                 <h2> Kräftigung der schrägen Bauchmuskulatur </h2>
                             </div>
-                            <p> <!-- künstlicher Schlüssel: 1 <br> -->
+                            <p> <!-- künstlicher Schlüssel: 17 <br> -->
                                 Schwierigkeit: 3 <br>
                                 Zeitaufwand: ca. Minuten <br>
                                 Übungsart: Kraft <br>
