--- a/AlleKörperteile/Beine.html
+++ b/AlleKörperteile/Beine.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Übungen für die Beine </title>
+    <title> Übungen ohne Beine </title>
     <link rel="stylesheet" type="text/css" href="/Styles/AlleUebungen.css">
   </head>
   <body>
 
     <section>
       <header>
-        <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
+        <h2><a href="/index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
-            <a href="index.html">Home</a>
-            <a href="AlleUebungen.html">Alle Übungen </a>
-            <a href="About.html">About</a>
-            <a href="Contact.html">Contact</a>
+            <a href="/index.html">Home</a>
+            <a href="/AlleUebungen.html">Alle Übungen </a>
+            <a href="/About.html">About</a>
+            <a href="/Contact.html">Contact</a>
         </div>
 
       </header> 
@@ -68,7 +68,7 @@
                                 Geschonte Bereiche: Beine, Bauch
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Armzieher.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post -->
  
@@ -174,8 +174,8 @@
                                 Schwierigkeit: 2 <br>
                                 Zeitaufwand: ca. 1 Minuten <br>
                                 Übungsart: Dehnung, Entspannung <br>
-                                Material: --- <br>
-                                Trainierte Bereiche: Oberarme, Bauch, Rücken <br>
+                                Material: Hocker, Rollstuhl o.ä <br>
+                                Trainierte Bereiche: Rücken <br>
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
@@ -413,7 +413,7 @@
                             <div class = "post-content-top">
                                 <h2> Kräftigung der schrägen Bauchmuskulatur </h2>
                             </div>
-                            <p> <!-- künstlicher Schlüssel: 1 <br> -->
+                            <p> <!-- künstlicher Schlüssel: 17 <br> -->
                                 Schwierigkeit: 3 <br>
                                 Zeitaufwand: ca. Minuten <br>
                                 Übungsart: Kraft <br>
