--- a/AlleÜbungen/Oberkörper_neigen.html
+++ b/AlleÜbungen/Oberkörper_neigen.html
@@ -11,7 +11,7 @@
 
     <section>
       <header>
-        <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
+        <h2><a href="/index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
           <a href="/index.html">Home</a>
           <a href="/AlleUebungen.html">Alle Übungen </a>
@@ -21,26 +21,30 @@
       </header>
 
 
-      <h2> Armzieher </h2>
+      <h2> Oberkörper neigen </h2>
 
       <div class="img-slider">
         <div class="slide active">
-          <img src="/BilderÜbungen/TEST.jpg" alt="">
+          <img src="/Übungen/2(1).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST2.jpg" alt="">
+          <img src="/Übungen/2(2).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST3.jpg" alt="">
+          <img src="/Übungen/2(3).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST4.jpg" alt="">
+          <img src="/Übungen/2(4).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST5.jpg" alt="">
+          <img src="/Übungen/2(5).jpg" alt="">
+        </div>
+        <div class="slide">
+          <img src="/Übungen/2.jpg" alt="">
         </div>
         <div class="navigation">
           <div class="btn active"></div>
+          <div class="btn"></div>
           <div class="btn"></div>
           <div class="btn"></div>
           <div class="btn"></div>
