--- a/AlleUebungen.html
+++ b/AlleUebungen.html
@@ -90,7 +90,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Oberkörper_neigen.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post -->
  
@@ -112,7 +112,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Schultern_kreisen.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -134,7 +134,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Bogenschießen.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -156,7 +156,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Rücken_überstrecken.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -179,7 +179,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Katzenbuckel.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
                      
@@ -202,7 +202,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Adlerflügel.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -224,7 +224,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Kamelritt.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -246,7 +246,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Drehsitz.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -268,7 +268,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Rumpfrotation.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -290,7 +290,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Seitenneigung.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -312,7 +312,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Aufrichten.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -334,7 +334,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Kräftigung Schulterblattstabilisatoren.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -356,7 +356,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Kräftigung Schulterblatt – und Rückenmuskulatur.html.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -378,7 +378,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Kräftigung der Schulteraussenrotatoren.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -400,7 +400,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Kräftigung der hinteren Oberarm- und Schulterblattmuskulatur.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -422,7 +422,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Kräftigung der schrägen Bauchmuskulatur.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -444,7 +444,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Kräftigung der Schulterblatt- und Rückenmuskulatur 2.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -466,7 +466,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Kräftigung der Ellbogenstrecker.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -488,7 +488,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Kräftigung der Außenrotatoren.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
                     <!-- single post -->
@@ -509,7 +509,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Dehnen der Brustmuskulatur.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
                     
@@ -531,7 +531,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Dehnen der Nackenmuskulatur.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -553,7 +553,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Entspannen der Rücken- und Nackenmuskulatur.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post -->
 
@@ -575,7 +575,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Dehnen der seitlichen Schulterblatt- und Oberarmmuskulatur.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -597,29 +597,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
-                    </div>
-                    <!-- end of single post --> 
-
-                    <!-- single post -->
-                    <div class = "all 2">
-                        <div class = "post-img">
-                            <img src = "images/business-1.jpg" alt = "post">
-                        </div>
-                        <div class = "post-content">
-                            <div class = "post-content-top">
-                                <h2> Oberkörper neigen </h2>
-                            </div>
-                            <p> <!-- künstlicher Schlüssel: 26 <br> -->
-                                Schwierigkeit: 2 <br>
-                                Zeitaufwand: ca. Minuten <br>
-                                Übungsart: Lockerung <br>
-                                Material: Stuhl <br>
-                                Trainierte Bereiche: Rücken <br>
-                                Geschonte Bereiche: ---
-                                </p>
-                        </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Dehnen der Schulterblattmuskulatur.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
 
@@ -630,7 +608,7 @@
                         </div>
                         <div class = "post-content">
                             <div class = "post-content-top">
-                                <h2> Kräftigung der Rücken- und Bauchmuskulatur </h2>
+                                <h2> Schulterblätter anheben </h2>
                             </div>
                             <p> <!-- künstlicher Schlüssel: 27 <br> -->
                                 Schwierigkeit: 2 <br>
@@ -641,7 +619,7 @@
                                 Geschonte Bereiche: ---
                                 </p>
                         </div>
-                        <a href="/AlleÜbungen/EinzelÜbung.html" class="read-btn"> Read All</a>
+                        <a href="/AlleÜbungen/Schulterblätter anheben.html" class="read-btn"> Read All</a>
                     </div>
                     <!-- end of single post --> 
                 </div>
