--- a/AlleÜbungen/Armzieher.html
+++ b/AlleÜbungen/Armzieher.html
@@ -11,7 +11,7 @@
 
     <section>
       <header>
-        <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
+        <h2><a href="/index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
           <a href="/index.html">Home</a>
           <a href="/AlleUebungen.html">Alle Übungen </a>
@@ -25,24 +25,16 @@
 
       <div class="img-slider">
         <div class="slide active">
-          <img src="/BilderÜbungen/TEST.jpg" alt="">
+          <img src="/Übungen/1(1).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST2.jpg" alt="">
+          <img src="/Übungen/1(2).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST3.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST4.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST5.jpg" alt="">
+          <img src="/Übungen/1(3).jpg" alt="">
         </div>
         <div class="navigation">
           <div class="btn active"></div>
-          <div class="btn"></div>
-          <div class="btn"></div>
           <div class="btn"></div>
           <div class="btn"></div>
         </div>
