--- a/AlleÜbungen/Bogenschießen.html
+++ b/AlleÜbungen/Bogenschießen.html
@@ -11,7 +11,7 @@
 
     <section>
       <header>
-        <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
+        <h2><a href="/index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
           <a href="/index.html">Home</a>
           <a href="/AlleUebungen.html">Alle Übungen </a>
@@ -21,27 +21,23 @@
       </header>
 
 
-      <h2> Armzieher </h2>
+      <h2> Bogenschießen </h2>
 
       <div class="img-slider">
         <div class="slide active">
-          <img src="/BilderÜbungen/TEST.jpg" alt="">
+          <img src="/Übungen/4(1).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST2.jpg" alt="">
+          <img src="/Übungen/4(2).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST3.jpg" alt="">
+          <img src="/Übungen/4(3).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST4.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST5.jpg" alt="">
+          <img src="/Übungen/4.jpg" alt="">
         </div>
         <div class="navigation">
           <div class="btn active"></div>
-          <div class="btn"></div>
           <div class="btn"></div>
           <div class="btn"></div>
           <div class="btn"></div>
@@ -50,9 +46,7 @@
       
 
       <div class="main-container">
-        <p id="exerciseDetails">Beschreibung: Den Stab mit beiden Händen hinter den Rücken nehmen und nach unten durchstrecken. 
-          Die Arme nun langsam nach oben bewegen, bis sie ungefähr im Rechten Winkel zum Rücken stehen. Dies nun 20 Sekunden halten, danach die Arme 10 Sekunden weiter nach oben drücken.  
-          Nun die Arme langsam wieder nach unten lassen und 10 Sekunden pausieren. Dies sechsmal wiederholen. <br> <br>
+        <p id="exerciseDetails">Gerade hinsetzen. Den Stab in beide Hände nehmen und diagonal nach links oben strecken. Die Rechte Hand in der Mitte der Brust lassen. Nun mit dem linken Arm nach außen ziehen und 20 Sekunden halten. In die Ruheposition zurückkehren und 10 Sekunden Pause machen. Die Übung nun gespiegelt wiederholen, also mit dem rechten Arm diagonal nach rechts oben strecken und die linke Hand in der Mitte der Brust lassen.<br> <br>
 
 
           Variante: Arme statt nach unten im 90° Winkel zum Körper nach hinten Strecken
