--- a/AlleÜbungen/Drehsitz.html
+++ b/AlleÜbungen/Drehsitz.html
@@ -11,7 +11,7 @@
 
     <section>
       <header>
-        <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
+        <h2><a href="/index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
           <a href="/index.html">Home</a>
           <a href="/AlleUebungen.html">Alle Übungen </a>
@@ -21,23 +21,23 @@
       </header>
 
 
-      <h2> Armzieher </h2>
+      <h2> Drehsitz </h2>
 
       <div class="img-slider">
         <div class="slide active">
-          <img src="/BilderÜbungen/TEST.jpg" alt="">
+          <img src="/Übungen/9(1).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST2.jpg" alt="">
+          <img src="/Übungen/9(2).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST3.jpg" alt="">
+          <img src="/Übungen/9(3).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST4.jpg" alt="">
+          <img src="/Übungen/9(4).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST5.jpg" alt="">
+          <img src="/Übungen/9.jpg" alt="">
         </div>
         <div class="navigation">
           <div class="btn active"></div>
@@ -48,11 +48,10 @@
         </div>
       </div>
       
+      
 
       <div class="main-container">
-        <p id="exerciseDetails">Beschreibung: Den Stab mit beiden Händen hinter den Rücken nehmen und nach unten durchstrecken. 
-          Die Arme nun langsam nach oben bewegen, bis sie ungefähr im Rechten Winkel zum Rücken stehen. Dies nun 20 Sekunden halten, danach die Arme 10 Sekunden weiter nach oben drücken.  
-          Nun die Arme langsam wieder nach unten lassen und 10 Sekunden pausieren. Dies sechsmal wiederholen. <br> <br>
+        <p id="exerciseDetails">Aufrecht hinsetzen. Mit der rechten Hand die Innenseite des linken Oberschenkels fassen und mit der linken Hand hinter dem Rücken nach rechts greifen. Dies 5 Sekunden halten. Nun die Seite wechseln, mit der linken Hand die Innenseite des rechten Oberschenkels fassen und mit der rechten Hand nach links greifen. Auch dies 5 Sekunden halten. 5 Sekunden Pause und dann 5 mal wiederholen.<br> <br>
 
 
           Variante: Arme statt nach unten im 90° Winkel zum Körper nach hinten Strecken
