--- a/AlleÜbungen/Kräftigung Schulterblatt – und Rückenmuskulatur.html
+++ b/AlleÜbungen/Kräftigung Schulterblatt – und Rückenmuskulatur.html
@@ -11,7 +11,7 @@
 
     <section>
       <header>
-        <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
+        <h2><a href="/index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
           <a href="/index.html">Home</a>
           <a href="/AlleUebungen.html">Alle Übungen </a>
@@ -21,41 +21,25 @@
       </header>
 
 
-      <h2> Armzieher </h2>
+      <h2> Kräftigung der Schulterblatt- und Rückenmuskulator </h2>
 
       <div class="img-slider">
         <div class="slide active">
-          <img src="/BilderÜbungen/TEST.jpg" alt="">
+          <img src="/Übungen/14(1).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST2.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST3.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST4.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST5.jpg" alt="">
+          <img src="/Übungen/14.jpg" alt="">
         </div>
         <div class="navigation">
           <div class="btn active"></div>
-          <div class="btn"></div>
-          <div class="btn"></div>
-          <div class="btn"></div>
           <div class="btn"></div>
         </div>
       </div>
       
 
       <div class="main-container">
-        <p id="exerciseDetails">Beschreibung: Den Stab mit beiden Händen hinter den Rücken nehmen und nach unten durchstrecken. 
-          Die Arme nun langsam nach oben bewegen, bis sie ungefähr im Rechten Winkel zum Rücken stehen. Dies nun 20 Sekunden halten, danach die Arme 10 Sekunden weiter nach oben drücken.  
-          Nun die Arme langsam wieder nach unten lassen und 10 Sekunden pausieren. Dies sechsmal wiederholen. <br> <br>
+        <p id="exerciseDetails">Beschreibung: Theraband auf Schulterhöhe (zum Beispiel an einem Türgriff) befestigen und aufrecht im Rollstuhl sitzen. Während der gesamten Übung die Schultern nicht anziehen, das heißt, dass die Ohren und Schultern immer denselben Abstand haben müssen. Mit dem Theraband in beiden Händen die Schultern nach hinten bewegen und die Ellbogen an den Körper anziehen.
 
-
-          Variante: Arme statt nach unten im 90° Winkel zum Körper nach hinten Strecken
           </p>
       </div>
 
