--- a/AlleÜbungen/Kräftigung der Ellbogenstrecker.html
+++ b/AlleÜbungen/Kräftigung der Ellbogenstrecker.html
@@ -11,7 +11,7 @@
 
     <section>
       <header>
-        <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
+        <h2><a href="/index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
           <a href="/index.html">Home</a>
           <a href="/AlleUebungen.html">Alle Übungen </a>
@@ -21,41 +21,27 @@
       </header>
 
 
-      <h2> Armzieher </h2>
+      <h2> Kräftigung der Ellenbogenstrecker </h2>
 
       <div class="img-slider">
         <div class="slide active">
-          <img src="/BilderÜbungen/TEST.jpg" alt="">
+          <img src="/Übungen/19(1).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST2.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST3.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST4.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST5.jpg" alt="">
+          <img src="/Übungen/19.jpg" alt="">
         </div>
         <div class="navigation">
           <div class="btn active"></div>
-          <div class="btn"></div>
-          <div class="btn"></div>
-          <div class="btn"></div>
           <div class="btn"></div>
         </div>
       </div>
       
 
       <div class="main-container">
-        <p id="exerciseDetails">Beschreibung: Den Stab mit beiden Händen hinter den Rücken nehmen und nach unten durchstrecken. 
-          Die Arme nun langsam nach oben bewegen, bis sie ungefähr im Rechten Winkel zum Rücken stehen. Dies nun 20 Sekunden halten, danach die Arme 10 Sekunden weiter nach oben drücken.  
-          Nun die Arme langsam wieder nach unten lassen und 10 Sekunden pausieren. Dies sechsmal wiederholen. <br> <br>
-
-
-          Variante: Arme statt nach unten im 90° Winkel zum Körper nach hinten Strecken
+        <p id="exerciseDetails">Beschreibung: Die Vorderräder der Rollstuhls nach vorne ausrichten. Den Oberkörper auf die Beine legen. Die oberarme an den Oberkörper anlegen und die Unterarme hängen lassen. Die Ellbogen nun abwechselnd strecken und beugen. Mindestens 5 Mal wiederholen.
+          <br> <br>
+          Variante: Diese Übung kann auch mit Hanteln oder sonstigen Gewichten in den Händen durchgeführt werden.
+          
           </p>
       </div>
 
