--- a/AlleÜbungen/Kräftigung der Schulteraussenrotatoren.html
+++ b/AlleÜbungen/Kräftigung der Schulteraussenrotatoren.html
@@ -11,7 +11,7 @@
 
     <section>
       <header>
-        <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
+        <h2><a href="/index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
           <a href="/index.html">Home</a>
           <a href="/AlleUebungen.html">Alle Übungen </a>
@@ -22,40 +22,10 @@
 
 
       <h2> Armzieher </h2>
-
-      <div class="img-slider">
-        <div class="slide active">
-          <img src="/BilderÜbungen/TEST.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST2.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST3.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST4.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST5.jpg" alt="">
-        </div>
-        <div class="navigation">
-          <div class="btn active"></div>
-          <div class="btn"></div>
-          <div class="btn"></div>
-          <div class="btn"></div>
-          <div class="btn"></div>
-        </div>
-      </div>
-      
+     
 
       <div class="main-container">
-        <p id="exerciseDetails">Beschreibung: Den Stab mit beiden Händen hinter den Rücken nehmen und nach unten durchstrecken. 
-          Die Arme nun langsam nach oben bewegen, bis sie ungefähr im Rechten Winkel zum Rücken stehen. Dies nun 20 Sekunden halten, danach die Arme 10 Sekunden weiter nach oben drücken.  
-          Nun die Arme langsam wieder nach unten lassen und 10 Sekunden pausieren. Dies sechsmal wiederholen. <br> <br>
-
-
-          Variante: Arme statt nach unten im 90° Winkel zum Körper nach hinten Strecken
+        <p id="exerciseDetails">Beschreibung: Gerade und aufrecht in den Rollstuhl setzen und die Schulterblätter nach hinten und unten bewegen. Der Abstand zwischen Ohren und Schultern sollte während der gesamten Übung gleich groß bleiben. Die Ellbogen sind am Oberkörper, leicht über der Mitte des Körpers. Das Theraband in beide Hände nehmen und die Hände so ausrichten, dass die Daumen nach oben zeigen. Die Arme langsam nach außen bewegen und dort 10 Sekunden halten. Die Ellbogen während der gesamten Übung am Körper behalten. Kann die Position der Ellbogen nicht gehalten werden, ein aufgerolltes Handtuch zwischen Ellbogen und Oberkörper legen. Diese Übung 5 mal wiederholen.
           </p>
       </div>
 
