--- a/AlleÜbungen/Kräftigung der hinteren Oberarm- und Schulterblattmuskulatur.html
+++ b/AlleÜbungen/Kräftigung der hinteren Oberarm- und Schulterblattmuskulatur.html
@@ -11,7 +11,7 @@
 
     <section>
       <header>
-        <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
+        <h2><a href="/index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
           <a href="/index.html">Home</a>
           <a href="/AlleUebungen.html">Alle Übungen </a>
@@ -21,27 +21,23 @@
       </header>
 
 
-      <h2> Armzieher </h2>
+      <h2> Kräftigung der hinteren Oberarm- und Schulterblattmuskulatur </h2>
 
       <div class="img-slider">
         <div class="slide active">
-          <img src="/BilderÜbungen/TEST.jpg" alt="">
+          <img src="/Übungen/16(1).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST2.jpg" alt="">
+          <img src="/Übungen/16(2).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST3.jpg" alt="">
+          <img src="/Übungen/16(3).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST4.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST5.jpg" alt="">
+          <img src="/Übungen/16.jpg" alt="">
         </div>
         <div class="navigation">
           <div class="btn active"></div>
-          <div class="btn"></div>
           <div class="btn"></div>
           <div class="btn"></div>
           <div class="btn"></div>
@@ -50,12 +46,10 @@
       
 
       <div class="main-container">
-        <p id="exerciseDetails">Beschreibung: Den Stab mit beiden Händen hinter den Rücken nehmen und nach unten durchstrecken. 
-          Die Arme nun langsam nach oben bewegen, bis sie ungefähr im Rechten Winkel zum Rücken stehen. Dies nun 20 Sekunden halten, danach die Arme 10 Sekunden weiter nach oben drücken.  
-          Nun die Arme langsam wieder nach unten lassen und 10 Sekunden pausieren. Dies sechsmal wiederholen. <br> <br>
+        <p id="exerciseDetails">Beschreibung: Gerade und aufrecht in den Rollstuhl setzen und die Schulterblätter nach hinten und unten bewegen. Der Abstand zwischen Ohren und Schultern sollte während der gesamten Übung gleich groß bleiben. Eine Hand wird auf Brusthöhe ausgestreckt und zeigt mit der Handfläche nach unten. Den Arm nun diagonal nach außen und oben bewegen, dabei die Handfläche langsam nach oben zeigen lassen. 5 Mal auf jeder Seite wiederholen.
+          <br> <br>
 
 
-          Variante: Arme statt nach unten im 90° Winkel zum Körper nach hinten Strecken
           </p>
       </div>
 
