--- a/AlleÜbungen/Kräftigung der schrägen Bauchmuskulatur.html
+++ b/AlleÜbungen/Kräftigung der schrägen Bauchmuskulatur.html
@@ -11,7 +11,7 @@
 
     <section>
       <header>
-        <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
+        <h2><a href="/index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
           <a href="/index.html">Home</a>
           <a href="/AlleUebungen.html">Alle Übungen </a>
@@ -22,40 +22,10 @@
 
 
       <h2> Armzieher </h2>
-
-      <div class="img-slider">
-        <div class="slide active">
-          <img src="/BilderÜbungen/TEST.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST2.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST3.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST4.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST5.jpg" alt="">
-        </div>
-        <div class="navigation">
-          <div class="btn active"></div>
-          <div class="btn"></div>
-          <div class="btn"></div>
-          <div class="btn"></div>
-          <div class="btn"></div>
-        </div>
-      </div>
       
 
       <div class="main-container">
-        <p id="exerciseDetails">Beschreibung: Den Stab mit beiden Händen hinter den Rücken nehmen und nach unten durchstrecken. 
-          Die Arme nun langsam nach oben bewegen, bis sie ungefähr im Rechten Winkel zum Rücken stehen. Dies nun 20 Sekunden halten, danach die Arme 10 Sekunden weiter nach oben drücken.  
-          Nun die Arme langsam wieder nach unten lassen und 10 Sekunden pausieren. Dies sechsmal wiederholen. <br> <br>
-
-
-          Variante: Arme statt nach unten im 90° Winkel zum Körper nach hinten Strecken
+        <p id="exerciseDetails">Gerade und aufrecht in den Rollstuhl setzen und die Schulterblätter nach hinten und unten bewegen. Der Abstand zwischen Ohren und Schultern sollte während der gesamten Übung gleich groß bleiben. Das Theraband seitlich auf Ellbogenhöhe befestigen. das Band mit beiden Händen umfassen,die Ellbogen  am Körper halten und die Hände auf Höhe der Rumpfmitte positionieren. Den Oberkörper mehrmals nach rechts dehnen und in die Ausgangsposition zurück drehen. Nach jeder Serie die Seite wechseln. 5 Mal wiederholen.
           </p>
       </div>
 
