--- a/AlleÜbungen/Seitenneigung.html
+++ b/AlleÜbungen/Seitenneigung.html
@@ -11,7 +11,7 @@
 
     <section>
       <header>
-        <h2><a href="index.html" class="logo"> GO ROBOT </a></h2>
+        <h2><a href="/index.html" class="logo"> GO ROBOT </a></h2>
         <div class="navigation">
           <a href="/index.html">Home</a>
           <a href="/AlleUebungen.html">Alle Übungen </a>
@@ -25,34 +25,24 @@
 
       <div class="img-slider">
         <div class="slide active">
-          <img src="/BilderÜbungen/TEST.jpg" alt="">
+          <img src="/Übungen/11(1).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST2.jpg" alt="">
+          <img src="/Übungen/11(2).jpg" alt="">
         </div>
         <div class="slide">
-          <img src="/BilderÜbungen/TEST3.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST4.jpg" alt="">
-        </div>
-        <div class="slide">
-          <img src="/BilderÜbungen/TEST5.jpg" alt="">
+          <img src="/Übungen/11.jpg" alt="">
         </div>
         <div class="navigation">
           <div class="btn active"></div>
           <div class="btn"></div>
           <div class="btn"></div>
-          <div class="btn"></div>
-          <div class="btn"></div>
         </div>
-      </div>
+      </div>      
       
 
       <div class="main-container">
-        <p id="exerciseDetails">Beschreibung: Den Stab mit beiden Händen hinter den Rücken nehmen und nach unten durchstrecken. 
-          Die Arme nun langsam nach oben bewegen, bis sie ungefähr im Rechten Winkel zum Rücken stehen. Dies nun 20 Sekunden halten, danach die Arme 10 Sekunden weiter nach oben drücken.  
-          Nun die Arme langsam wieder nach unten lassen und 10 Sekunden pausieren. Dies sechsmal wiederholen. <br> <br>
+        <p id="exerciseDetails">Beschreibung: Aufrecht hinsetzen. Den Oberkörper nach rechts neigen und die Arme nach unten ausstrecken, sodass die Finger zum Boden zeigen. Falls nötig können Sie sich mit ihrer anderen Hand am Rollstuhl festhalten. Diese Position für 5 Sekunden halten, dann Seitenwechsel. Diese Übung 5 Mal pro Seite machen.<br> <br>
 
 
           Variante: Arme statt nach unten im 90° Winkel zum Körper nach hinten Strecken
